MB-57651: Fix potential memory overflow KVBucket::validateKey

stat vkey tries to run memcmp to determine if two objects are
identical but is only checking the length field of one of the
entries.

This is unsafe if the other blob is smaller than the provided
number (causing us to address memory outside the object), and
would produce an incorrect result if the second object is
larger than the first object (and is equal up to the provided
length)

Change-Id: I0aae0b961a96b2da0c16b17e46923f6280295155
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/195972
Tested-by: Trond Norbye <trond.norbye@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>